# salon-mate

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_GUIDE.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  ENVIRONMENT.md  HUMAN_TASKS.md  LICENSE  README.md  VERSIONING_GUIDE.md  beauty-marketing-platform-direction.md  docker-compose.yml  plan.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  task.md
.github/workflows/: ci.yml  codeql.yml  deploy.yml  release.yml
.specify/memory/: constitution.md
ai-worker/: Makefile  pyproject.toml  requirements-dev.txt  requirements.txt
ai-worker/src/: config.py  main.py
ai-worker/src/prompts/: caption.py  review.py
ai-worker/src/tasks/: caption.py  review_response.py
ai-worker/tests/: conftest.py  test_caption.py  test_review_response.py
backend/: Makefile  go.mod
backend/cmd/api/: main.go
backend/cmd/worker/: main.go
backend/db/: sqlc.yaml
backend/db/migrations/: 000001_initial_schema.down.sql  (+1 more)
docs/: INDEX.md  SECURITY-INCIDENT-RESPONSE.md
docs/specs/: API_SPEC.md  ARCHITECTURE.md  DATA_MODEL.md  PRD.md  TECH_STACK_ALTERNATIVES.md  UX_SCREEN_SPEC.md  ui-component-inventory.md
frontend/: package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.d.ts  app.html
infra/: docker-compose.yml
infra/docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.worker
public/: logo_v0.html  logo_v1.0.html  logo_v1.1.html  logo_v1.2.html  logo_v1.3.html  logo_v1.4.html  logo_v1.5.html  logo_v1.6.html  logo_v1.7.html  logo_v1.8.html  logo_v2.0.html
scripts/: init-db.sql
specs/001-marketing-dashboard/: data-model.md  plan.md  quickstart.md  research.md  screen-definition.md  spec.md  tasks.md
specs/002-review-management/: screen-definition.md
specs/003-content-studio/: screen-definition.md
specs/004-settings/: screen-definition.md
specs/005-onboarding/: screen-definition.md
src/backend/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/backend/alembic/: env.py
src/backend/alembic/versions/: b74f4d9e2ab3_initial_tables.py  c001_create_posts_table.py  c002_add_review_dashboard_indexes.py  c003_create_style_tags_table.py
src/backend/api/: deps.py  errors.py
src/backend/api/v1/: __init__.py  auth.py  dashboard.py  health.py  inbox.py  instagram.py  onboarding.py  posts.py  reports.py  reviews.py  settings.py  shops.py  styles.py  users.py
src/backend/config/: database.py  settings.py
src/backend/core/: security.py
src/backend/infrastructure/cache/: redis_cache.py
src/backend/middleware/: __init__.py  timing.py
src/backend/models/: base.py  post.py  review.py  shop.py  social_account.py  style_tag.py  user.py
src/backend/schemas/: ai_response.py  auth.py  common.py  dashboard.py  oauth.py  onboarding.py  post.py  review.py  settings.py  shop.py  user.py
src/backend/scripts/: check_db.py  check_redis.py
src/backend/services/: __init__.py  ai_response_service.py  auth_service.py  dashboard_service.py  instagram_service.py  oauth_service.py  onboarding_service.py  post_service.py  report_service.py  review_service.py  settings_service.py  shop_service.py  user_service.py  vision_service.py
src/backend/tests/: conftest.py
src/backend/tests/api/v1/: test_ai_response.py  test_auth_login.py  test_auth_signup.py  test_oauth.py  test_onboarding.py  test_posts.py  test_review.py  test_settings.py  test_shop.py  test_token_refresh.py  test_user_profile.py
src/backend/tests/integration/: test_dashboard_api.py
src/backend/tests/performance/: test_dashboard_perf.py
src/backend/tests/unit/: test_dashboard_service.py
src/frontend/: Dockerfile.dev  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
(+135 files in other folders)
